2019-02-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  'plot with table' assumed that the maximum size of an
	output column is the maximum width produced by format "%g", but that limit
	is irrelevant for string output.  Change it to dynamically allocate space
	for whatever string is returned by strcol(i).

2019-01-01  Release 5.2.6

2018-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/titlepag.tex src/version.c configure.ac RELEASE_NOTES:
	Bump version to 2.6

2018-11-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (ggmtime): Allow for round-off error in date conversion
	
	The reported case was converting time = -1.75145e-13 seconds
	Round-off error put this initially in 1969, but counting out seconds
	per hour/day/month/ put it back at 1970 time 0 described as 1969
	month 13.  It looks to me that the same error could in principle
	trigger at any year boundary, so test explicitly for month wrap-around.
	Bug #2087
	
	reported by: Tim Blazytko, Cornelius Aschermann, Sergej Schumilo, Nils Bars

2018-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* various overflow cases found by fuzzing
	Credits:
	    Tim Blazytko
	    Cornelius Aschermann
	    Sergej Schumilo
	    Nils Bars
	
	Bug 2088: term.c(strlen_tex)
	Bug 2089: cairo.trm metapost.trm tgif.trm (arbitrarily long font name)
	Bug 2092: cgm.trm overwrites trailing '\0' in default font name
	      also context.trm emf.trm
	Bug 2094: also post.trm
	Bug 2093: datafile.c expand df_line on input as necessary to hold string data
	Bug 2095: eepic.trm (EEPIC_put_text) ignore request to print empty string
	Bug 2096: buffer underrun if input line begins with '\0'

2018-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c src/gp_types.h src/graph3d.c src/graphics.c
	src/hidden3d.c src/parse.c src/plot2d.c src/plot3d.c:

	New keyword "keyentry" for both plot and splot commands. This places
	a line in the key but does not produce a corresponding plot.  The